--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "nikic/php-parser": "4.10 as v3.0.0alpha1",
-        "mostka/phptojs": "9999999-dev"
+        "nikic/php-parser": "4.10"
     },
     "autoload": {
         "psr-4": {
-            "BagusIndrayana\\LaravelMap\\": "src"
+            "BagusIndrayana\\LaravelMap\\": "src",
+            "BagusIndrayana\\LaravelMap\\Tests\\": "test"
         }
    
     },
@@ -26,5 +26,8 @@
                 "BagusIndrayana\\LaravelMap\\LaravelMapServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
